--- a/MyMoviesApp/MyMoviesApp.xcodeproj/xcshareddata/xcschemes/MyMoviesApp UAT.xcscheme
+++ b/MyMoviesApp/MyMoviesApp.xcodeproj/xcshareddata/xcschemes/MyMoviesApp UAT.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3F63CB3D26EB1E4B006D0CA2"
-               BuildableName = "MyMoviesApp.app"
-               BlueprintName = "MyMoviesApp"
+               BlueprintIdentifier = "3F8AAAD026EC9DAF00939DA2"
+               BuildableName = "MyMoviesApp UAT.app"
+               BlueprintName = "MyMoviesApp UAT"
                ReferencedContainer = "container:MyMoviesApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3F63CB3D26EB1E4B006D0CA2"
-            BuildableName = "MyMoviesApp.app"
-            BlueprintName = "MyMoviesApp"
+            BlueprintIdentifier = "3F8AAAD026EC9DAF00939DA2"
+            BuildableName = "MyMoviesApp UAT.app"
+            BlueprintName = "MyMoviesApp UAT"
             ReferencedContainer = "container:MyMoviesApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -57,16 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3F63CB3D26EB1E4B006D0CA2"
-            BuildableName = "MyMoviesApp.app"
-            BlueprintName = "MyMoviesApp"
+            BlueprintIdentifier = "3F8AAAD026EC9DAF00939DA2"
+            BuildableName = "MyMoviesApp UAT.app"
+            BlueprintName = "MyMoviesApp UAT"
             ReferencedContainer = "container:MyMoviesApp.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
